# RiscV-interpreter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: rvi_config.hpp  rvi_decode_info.hpp  rvi_instruction_interface.hpp  rvi_instruction_registry.hpp  rvi_instruction_type_b.hpp  rvi_instruction_type_i.hpp  rvi_instruction_type_r.hpp  rvi_instruction_type_r_impl.hpp  rvi_instruction_type_s.hpp  rvi_instruction_type_u.hpp  rvi_memory_state.hpp  rvi_mmap_file.hpp  rvi_parse_elf.hpp  rvi_read_binary.hpp  rvi_registers.hpp  rvi_state.hpp
include/rv32f/: rvi_rv32f_registration.cpp  rvi_rv32f_registration.hpp  rvi_rv32f_type_f_load.hpp  rvi_rv32f_type_r.hpp  rvi_rv32f_type_r4.hpp  rvi_rv32f_type_s_save.hpp
include/rv32i/: rvi_rv32i_registration.cpp  rvi_rv32i_registration.hpp  rvi_rv32i_type_b_branch.hpp  rvi_rv32i_type_i_arithm.hpp  rvi_rv32i_type_i_fence.hpp  rvi_rv32i_type_i_jalr.hpp  rvi_rv32i_type_i_load.hpp  rvi_rv32i_type_i_system.hpp  rvi_rv32i_type_j_jal.hpp  rvi_rv32i_type_r.hpp  rvi_rv32i_type_r_compare.hpp  rvi_rv32i_type_s_store.hpp  rvi_rv32i_type_u_auipc.hpp  rvi_rv32i_type_u_lui.hpp
include/rv32m/: rvi_rv32m_registration.cpp  rvi_rv32m_registration.hpp  rvi_rv32m_type_r.hpp
include/rv32zbb/: rvi_rv32zbb_common_helpers.hpp  rvi_rv32zbb_registration.cpp  rvi_rv32zbb_registration.hpp  rvi_rv32zbb_type_i.hpp  rvi_rv32zbb_type_r.hpp
source/: main.cpp  rvi_decode_info.cpp  rvi_instruction_interface.cpp  rvi_instruction_registry.cpp  rvi_memory_state.cpp  rvi_mmap_file.cpp  rvi_parse_elf.cpp  rvi_read_binary.cpp
tests/: Makefile  api.s  read_write_test.c  run_tests.py  rv32f_arith.c  rv32f_convert.c  rv32f_sign_compare.c  rv32i_add_sub.c  rv32i_bitwise.c  rv32i_compare.c  rv32i_control_flow.c  rv32i_memory.c  rv32i_shift.c  rv32m_div_rem_signed.c  rv32m_div_rem_unsigned.c  rv32m_mul.c  rv32zbb.c  test_add  test_add.c  test_div.c  test_echo.c  test_fib.c  test_io.h  test_mul.c  test_quick_sort.c  test_rv32i_thorough  test_rv32i_thorough.c  test_rv32m_thorough.c  test_sort.c  test_z_avl.c
tests/cases/: rv32f_arith.json  rv32f_convert.json  rv32f_sign_compare.json  rv32i_add_sub.json  rv32i_bitwise.json  rv32i_compare.json  rv32i_control_flow.json  rv32i_memory.json  rv32i_shift.json  rv32m_div_rem_signed.json  rv32m_div_rem_unsigned.json  rv32m_mul.json  rv32zbb.json  test_add.json  test_div.json  test_echo.json  test_fib.json  test_mul.json  test_quick_sort.json  test_sort.json  test_z_avl.json
